# big_math

./: CMakeLists.txt  README.md  main.cpp
big_float/: CMakeLists.txt
big_float/inc/: bigfloat.hpp
big_float/src/:  trigonometry.cpp  arithmetic.cpp  big_float.cpp  helpers.cpp  ios.cpp  log.cpp  logic.cpp
matrix/: CMakeLists.txt
matrix/inc/: matrix.hpp
vector/: CMakeLists.txt
vector/inc/: vector.hpp
